Series/Intermediate/Sessions/Session-021_FlexTemplateInvocation_ApexRest/objects/YoutubeVideo__c/YoutubeVideo__c.object-meta.xml
<CustomObject>
    <label>Youtube Video</label>
    <nameField>
        <displayFormat>YT-{0000000000}</displayFormat>
        <label>Youtube Video Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Youtube Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>