Series/Intermediate/Sessions/Session-021_FlexTemplateInvocation_ApexRest/objects/YoutubeVideo__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>