Series/Intermediate/Sessions/Session-021_FlexTemplateInvocation_ApexRest/objects/YoutubeVideo__c/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <label>Published Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>