Series/Intermediate/Sessions/Session-021_FlexTemplateInvocation_ApexRest/objects/YoutubeVideo__c/fields/RelatedTopics__c.field-meta.xml
<CustomField>
    <fullName>RelatedTopics__c</fullName>
    <label>Related Topics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>