Series/Intermediate/Sessions/Session-021_FlexTemplateInvocation_ApexRest/objects/YoutubeVideo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Language__c</columns>
    <columns>Published_Date__c</columns>
    <columns>Url__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>